compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/TwoOverrides.fir.java
public final class TwoOverrides /* TwoOverrides*/ implements java.lang.Iterable<java.lang.String>, kotlin.collections.Iterable<java.lang.String>, kotlin.jvm.internal.markers.KMappedMarker {
  @java.lang.Override()
  @org.jetbrains.annotations.Nullable()
  public java.lang.Void iterator();//  iterator()

  @java.lang.Override()
  @org.jetbrains.annotations.Nullable()
  public java.lang.Void iterator();//  iterator()

  public  TwoOverrides();//  .ctor()
}
